DCS-630 fixing print display of content - respecting whitespace, correcting label and fixing date display (#418)

--- a/assets/sass/local.sass
+++ b/assets/sass/local.sass
@@ -141,6 +141,9 @@ header.govuk-header
 .statement
   white-space: pre-wrap 
 
+.pre-wrapped
+  white-space: pre-wrap
+
 .info-panel
   background-color: $govuk-blue
   color: govuk-colour("white")
